--- a/src/main/resources/templates/environments.xhtml
+++ b/src/main/resources/templates/environments.xhtml
@@ -8,31 +8,34 @@ and open the template in the editor.
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
     <head>
-        <title>Zoo: Animals</title>
+        <title>Zoo: Environments</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
         <link rel="stylesheet" type="text/css" th:href="@{/css/styles.css}"/>
+        <script lang="text/javascript" th:src="@{/js/jquery/jquery.js}"></script>
+        <script lang="text/javascript" th:src="@{/js/environmentAnimalManage.js}"></script>
     </head>
     <body>
-        <h1>Animals</h1>
+        <h1>Environments</h1>
         <table>
             <thead>
                 <tr>
-                    <td><a href="#" th:href="@{/animals}">Type</a></td>
-                    <td><a href="#" th:href="@{/animals/quantity}">Number</a></td>
-                    <td><a href="#" th:href="@{/animals/compatibleEnvironment}">Environment</a></td>
-                    <td><a href="#" th:href="@{/animals/exhibit}">Exhibit</a></td>
+                    <td>Name</td>
+                    <td>Compatible Animals</td>
                     <td>Actions</td>
                 </tr>
             </thead>
             <tbody>
-                <tr th:each="a : ${animals}">
-                    <td><a href="#" th:href="${'/animal/' + a.id}" th:text="${a.type}"></a></td>
-                    <td th:text="${a.quantity}"></td>
-                    <td th:text="${a.compatibleEnvironment.name}"></td>
-                    <td th:text="${a.exhibit.name}"></td>
+                <tr th:each="e : ${environments}">
+                    <td><a href="#" th:href="@{'/environment/' + ${e.id}}" th:text="${e.name}"></a></td>
                     <td>
-                        <a href="#" th:href="${'/animal/edit/' + a.id}">Edit</a>
-                        <a href="#" th:href="${'/animal/delete/' + a.id}">Delete</a>
+                        <div class="click">Animals (click to toggle)</div>
+                        <ul class="toggle" style="display:none">
+                            <li th:each="a : ${e.compatibleAnimals}" th:text="${a.type}"/>
+                        </ul>
+                    </td>
+                    <td>
+                        <a href="#" th:href="@{'/environment/edit/' + ${e.id}}">Edit</a>
+                        <a href="#" th:href="@{'/environment/delete/' + ${e.id}}">Delete</a>
                     </td>
                 </tr>
             </tbody>
