Basic functionality for exhibits complete

--- a/src/main/resources/templates/animalform.xhtml
+++ b/src/main/resources/templates/animalform.xhtml
@@ -38,7 +38,7 @@ and open the template in the editor.
                         th:text="${ex.name}"/>
             </select><br/>
             <input type='hidden' th:field='*{id}' />
-            <input type="submit" value="Sumit" name="submit"/>
+            <input type="submit" value="Submit" name="submit"/>
         </form>
     </body>
 </html>
